@@ -11,7 +11,7 @@
  * When loading via an external converter, keep track of it in i:_external_decoder_program
 # (r1995-r1996)
  * Load XCF (Gimp) files via the xcf2pnm utility
-# (r1991-r1994,r1998-r1999,r2046,r2053-r2070,r2072,r2074-r2075)
+# (r1991-r1994,r1998-r1999,r2046,r2053-r2070,r2072,r2074-r2076)
  * Documentation and self-documentation improvements
 # (r2039)
  * Experimental support for reading QOI files via libqoi
@@ -39,6 +39,8 @@
  * Introduce expansion-only variable description syntax "#!fim:@var=val"
 # (r2075)
 # * Misc fixes
+# (r2076)
+ * --slideshow option now accepts decimal values
 
                 Version 0.6-rc2
 
