@@ -21,6 +21,7 @@
  * Configure fixes (remove bashisms by SDL version recognition)
  * Scaling fix when starting with -o ca
  * Introduce expansion-only variable description syntax "#!fim:@var=val"
+ * --slideshow option now accepts decimal values
 
                 Version 0.6-rc2
 
